cluster/apps/default/thelounge/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thelounge
  namespace: default
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: thelounge
  template:
    metadata:
      labels:
        app.kubernetes.io/name: thelounge
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3s2
      containers:
        - name: thelounge
          image: ghcr.io/thelounge/thelounge:latest
          ports:
            - name: http
              containerPort: 9000
          volumeMounts:
            - name: config
              mountPath: /var/opt/thelounge
          resources:
            requests:
              cpu: 100m
              memory: 250Mi
      volumes:
        - name: config
          hostPath:
            path: /data/thelounge
            type: DirectoryOrCreate
