cluster/apps/default/thelounge/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: thelounge
  namespace: default
spec:
  ports:
    - port: 9000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: thelounge
